# can-upgrade

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: release.yml
PCANBasic/: PCANBasic.h
can-dx/: Cargo.toml  Dioxus.toml
can-dx/src/: app.rs  can_manager.rs  main.rs  pcan.rs  socketcan.rs
can-walk/: README.md  build.ps1  can.go  go.mod  main.go  manifest.xml  pcan.go  rsrc.syso
can-walk/genicon/: go.mod  main.go
can-webkitGTK/: CMakeLists.txt  CMakePresets.json
can-webkitGTK/assets/: index.html
can-webkitGTK/cmake/: EmbedText.cmake
can-webkitGTK/src/: CanManager.cpp  CanManager.h  main.cpp
can-webview2/: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
can-webview2/docs/: architecture.html
can-webview2/include/: CanManager.h  resource.h
can-webview2/resources/: index.html  resource.rc
can-webview2/src/: CanManager.cpp  main.cpp
can-win32c/: CMakeLists.txt  CMakePresets.json  README.md
can-win32c/include/: PCANBasic.h  can_manager.h  pcan_loader.h  resource.h
can-win32c/resources/: resource.rc
can-win32c/src/: can_manager.c  main.c  pcan_loader.c
crypt/crc/: CMakeLists.txt  CMakePresets.json  Makefile  README.md  crc.ipynb
crypt/crc/include/: crc.h  crc_api.h
crypt/crc/src/: crc.c  crc_api.c
crypt/crc/tests/: test_crc.c
crypt/ecc_demo/: ecc_demo.py  generate_ecc_key.py
en/can-gtk4/: .gitignore  CMakeLists.txt  README.md
en/can-gtk4/include/: can_manager.h
en/can-gtk4/resources/: main.ui
en/can-gtk4/src/: can_manager.c  main.c  main.ui
en/win32c/: .gitignore  CMakeLists.txt  README.md
en/win32c/include/: can_manager.h
en/win32c/resources/: resource.rc
en/win32c/src/: can_manager.c  main.c  uart_manager.c
en/win32cpp/: CMakeLists.txt  README.md
en/win32cpp/include/: resource.h  uart_manager.h
en/win32cpp/resources/: resource.rc
en/win32cpp/src/: can_manager.cpp  main.cpp  uart_manager.cpp
fw/stm32_bootloader/: .mxproject  CMakeLists.txt  CMakePresets.json  README.md  stm32_bootloader.ioc  stm32f103rctx_flash.ld  uart_upgrade.py
fw/stm32_bootloader/Core/Inc/: fw_can.h  fw_uart.h  fw_upgrade.h  main.h  stm32f1xx_it.h  usart.h
fw/stm32_bootloader/Core/Src/: can.c  fw_can.c  fw_uart.c  fw_upgrade.c  gpio.c  main.c  stm32f1xx_hal_timebase_tim.c  stm32f1xx_it.c  usart.c
fw/stm32_bootloader/cmake/stm32cubemx/: CMakeLists.txt
gtk4/: CMakeLists.txt  README.md
gtk4/.claude/: settings.local.json
gtk4/src/: can_socket.c  can_socket.h  main.c  window.c  window.h
python/: README.md  can_server.py  requirements.txt
qt/: .gitignore  BUILD.md  CMakeLists.txt  CMakePresets.json  README.md
qt/.claude/: settings.local.json
qt/resources/: app.ico.rc.in  resources.qrc
qt/src/: canmanager.cpp  canmanager.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
qt/translations/: can_upgrade_zh_CN.ts
rust/: Cargo.toml  README.md
rust/ui/: app-window.slint
src/: main.rs
ui/: app-window.slint
win32/: CMakeLists.txt  README.md
win32/resources/: resource.rc
win32/src/: can_manager.cpp  can_manager.h  can_protocol.h  main.cpp  resource.h
win32c/: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
win32c/include/: can_manager.h  resource.h  uart_manager.h
win32c/resources/: resource.rc
win32c/src/: can_manager.c  main.c  uart_manager.c
win32cpp/: CMakeLists.txt  README.md
win32cpp/include/: can_manager.h  resource.h
win32cpp/resources/: resource.rc
win32cpp/src/: can_manager.cpp  main.cpp
wincu/: CMakeLists.txt  CMakePresets.json  README.md
wincu/include/: can_manager.h
wincu/resources/: resource.rc
wincu/src/: can_manager.cpp  main.cpp
