[package]
name = "can-dx"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { version = "0.7.9", features = ["desktop"] }
libloading = "0.8"
once_cell = "1.20"
rfd = "0.15"
async-std = "1.13"
chrono = "0.4"

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
