[package]
name = "can-firmware-upgrade"
version = "0.1.0"
edition = "2024"

[dependencies]
rfd = "0.15.4"
slint = "=1.8.0"

[build-dependencies]
slint-build = "=1.8.0"
winres = "0.1.12"

[target.x86_64-pc-windows-msvc.dependencies]
peak-can-sys = "0.1.2"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

